<?xml version="1.0"?>
<package format="2">
  <name>pimouse_vision_control</name>
  <version>0.0.0</version>
  <description>The pimouse_vision_control package</description>
  <maintainer email="efmgh2511@outlook.jp">ubuntu</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/Yuto2511</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pimouse_ros</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pimouse_ros</exec_depend>

  <export>

  </export>
</package>
